--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/DogukanTopcu/react-tailwind-mui-redux-template.git",
+  "author": "DogukanTopcu <dogukan_topcu3575@icloud.com>",
+  "license": "MIT"
 }
