--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "main": "index.js",
   "repository": "https://github.com/DogukanTopcu/react-tailwind-mui-redux-template.git",
   "author": "DogukanTopcu <dogukan_topcu3575@icloud.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
+  }
 }
